examples/exploit-examples/klee-out-0/test000001.ptr.err
Error: exploit succeed: memory operation with symbolic addr
File: t1.c
Line: 59
assembly.ll line: 8912
Stack: 
	#000008912 in __klee_posix_wrapped_main (=1, =93825042271376) at t1.c:59
	#100007094 in __user_main (=1, =93825040160768, =93825040160784) at runtime/POSIX/klee_init_env.c:245
	#200000544 in __uClibc_main (=93825040253448, =1, =93825040160768, =0, =0, =0, =0) at libc/misc/internals/__uClibc_main.c:401
	#300000709 in main (=1, =93825040160768)
Info: 
	address: (ReadLSB w64 40 input)
	example: 0
	range: [0, 18446744073709551615]
	next: object at 93825040155648 of size 492
		MO51[492] allocated at main():  call void @__uClibc_main(i32 (i32, i8**, i8**)* @__user_main, i32 %0, i8** %1, void ()* null, void ()* null, void ()* null, i8* null)
